[gd_scene load_steps=4 format=3 uid="uid://bq82meappt10a"]

[ext_resource type="Script" path="res://dice_roll_canvas.gd" id="1_3bpgo"]
[ext_resource type="PackedScene" uid="uid://cef320n1hmlrj" path="res://dice_roll_viewport.tscn" id="1_xf4lg"]

[sub_resource type="ViewportTexture" id="ViewportTexture_rghh8"]
viewport_path = NodePath("DiceRollViewport")

[node name="DiceRollCanvas" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_3bpgo")

[node name="DiceRollSprite" type="Sprite2D" parent="."]
position = Vector2(832, 336)
scale = Vector2(0.671875, 0.671875)
texture = SubResource("ViewportTexture_rghh8")

[node name="DiceRollViewport" parent="." instance=ExtResource("1_xf4lg")]

[connection signal="roll_finished" from="DiceRollViewport" to="." method="_on_dice_roll_viewport_roll_finished"]
